Fix hide logo on mobile

--- a/client/src/components/Header.module.scss
+++ b/client/src/components/Header.module.scss
@@ -30,6 +30,10 @@
     font-size: 2rem;
     font-weight: bold;
     color: #fff;
+
+	@media (max-width: 650px) {
+    	display: none;
+	}
 }
 
 .nav {
@@ -44,6 +48,7 @@
     height: 44px;
     margin-right: 10px;
 }
+
 .logoLink {
     text-decoration: none;
 }
